enhance mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,8 +110,8 @@ body {
     display: block;
   }
 
-  .bottom-dots {
+  /* .bottom-dots {
     position: relative;
     margin-top: 40px;
-  }
+  } */
 } 
